<resources>
    <string name="app_name">EZShifaAssesmentMuti</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="services">Services</string>
    <string name="posts">Posts</string>
    <string name="fragment_tag_all_posts">All Posts</string>
    <string name="fragment_tag_home">Home</string>
    <string name="post_image">Post Image</string>
    <string name="title">Title</string>
    <string name="title_activity_main_three">MainThree</string>
    <string name="title_activity_xyz">XYZ</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="splash_icon">splash icon</string>
    <string name="payment_history">Payment History</string>
    <string name="government_services">Government Services</string>
    <string name="tourism">Tourism</string>
    <string name="transport">Transport</string>
    <string name="banking">Banking</string>
    <string name="multimedia">Multimedia</string>
    <string name="other_services">Other Services</string>
    <string name="care_center">Care Center</string>
    <string name="health">Health</string>
    <string name="mechanical">Mechanical</string>
    <string name="emergency">Emergency</string>
    <string name="hello_world_this_is_sample_text_for_illustration">Hello World! This is sample text for Illustration</string>
    <string name="fragment_tag_services">Services</string>
    <string name="hospitals">Hospitals</string>
    <string name="restaurants">Restaurants</string>
    <string name="universities">Universities</string>
    <string name="schools">Schools</string>
    <string name="collages">Collages</string>
    <string name="education">Education</string>
    <string name="are_you_sure_to_exit">Are you sure to exit</string>
    <string name="drawer_opened">Drawer Opened</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
</resources>